--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <li><a href="css">CSS</a></li>
         <li><a href="update here">Update Here</a></li>
         <li><a href="update here">Update Here</a></li>
+        <li><a href="update here">Update Here</a></li>
       </ul>
     </nav>
   </header>
+<body>
 
-  <body>
-    <h1>HTML Table Reference</h1>
-  </body>
+</body>
 </html>
