--- a/index.html
+++ b/index.html
@@ -8,15 +8,39 @@
     <h1 id="main-title">My Cheat Sheet</h1>
     <nav class="navigation">
       <ul>
-        <li><a href="html">HTML</a></li>
-        <li><a href="css">CSS</a></li>
-        <li><a href="update here">Update Here</a></li>
-        <li><a href="update here">Update Here</a></li>
-        <li><a href="update here">Update Here</a></li>
+        <li><a href="#html">HTML</a></li>
+        <li><a href="#css">CSS</a></li>
+        <li><a href="#update here">Update Here</a></li>
+        <li><a href="#update here">Update Here</a></li>
+        <li><a href="#update here">Update Here</a></li>
       </ul>
     </nav>
   </header>
+
 <body>
+  <section id="html">
+    <article>
+      <h2 class="header">HTML Cheat Sheet</h2>
+      <h3 class="header1">HTML Elements (add a more specific title)</h3>
+      <p>Put different elements here, go down in order from my notes and group them into different types of elements such as table, etc</p>
+    </article>
+  </section>
+
+  <section id="css">
+    <article>
+      <h2 class="header">CSS Cheat Sheet</h2>
+      <h3 class="header1">CSS Elements (add a more specific title)</h3>
+      <p>Put different elements here for CSS and go in order from my notes, make a table for them to be explained in and for practice</p>
+    </article>
+  </section>
+
+  <section id="update here">
+    <article>
+      <h2 class="header">Update Here</h2>
+      <h3 class="header1">Update here with JS elements and information when it is learned. Good way to practice and keep up with what i am learning</h3>
+      <p>Use a table and update that table each time i learn something new</p>
+    </article>
+  </section>
 
 </body>
 </html>
