udpated layout and added table

--- a/index.html
+++ b/index.html
@@ -5,38 +5,67 @@
   </head>
 
   <header>
-    <h1 id="main-title">My Cheat Sheet</h1>
     <nav class="navigation">
-      <ul>
-        <li><a href="#html">HTML</a></li>
-        <li><a href="#css">CSS</a></li>
-        <li><a href="#update here">Update Here</a></li>
-        <li><a href="#update here">Update Here</a></li>
-        <li><a href="#update here">Update Here</a></li>
-      </ul>
+      <h2><a href="#html">HTML</a></h2>
+      <h2><a href="#css">CSS</a></h2>
+      <h2 id="main-title">My Cheat Sheet</h2>
+      <h2><a href="#java">Java Script</a></h2>
+      <h2><a href="#update here1">Update Here1</a></h2>
     </nav>
   </header>
 
 <body>
   <section id="html">
     <article>
-      <h2 class="header">HTML Cheat Sheet</h2>
-      <h3 class="header1">HTML Elements (add a more specific title)</h3>
-      <p>Put different elements here, go down in order from my notes and group them into different types of elements such as table, etc</p>
+      <h2 class="header">HTML</h2>
+      <table class="tableone">
+        <thead>
+          <tr>
+            <th colspan="2">
+              <h3>Common HTML Tags</h3>
+            </th>
+          </tr>
+          <tr>
+            <th>
+              <h4>Table Tags</h4>
+            </th>
+            <th>
+              <h4>Function of Tags</h4>
+            </th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+             <h5>< table ></h5>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h5>< thead></h5>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <h5>< tbody></h5>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </article>
   </section>
 
   <section id="css">
     <article>
-      <h2 class="header">CSS Cheat Sheet</h2>
+      <h2 class="header">CSS</h2>
       <h3 class="header1">CSS Elements (add a more specific title)</h3>
       <p>Put different elements here for CSS and go in order from my notes, make a table for them to be explained in and for practice</p>
     </article>
   </section>
 
-  <section id="update here">
+  <section id="java script">
     <article>
-      <h2 class="header">Update Here</h2>
+      <h2 class="header">Java Script</h2>
       <h3 class="header1">Update here with JS elements and information when it is learned. Good way to practice and keep up with what i am learning</h3>
       <p>Use a table and update that table each time i learn something new </p>
     </article>
