--- a/index.html
+++ b/index.html
@@ -19,36 +19,20 @@
     <article>
       <h2 class="header">HTML</h2>
       <table class="tableone">
-        <thead>
+        <thead class="table head">
           <tr>
-            <th colspan="2">
-              <h3>Common HTML Tags</h3>
-            </th>
-          </tr>
-          <tr>
-            <th>
-              <h4>Table Tags</h4>
-            </th>
-            <th>
-              <h4>Function of Tags</h4>
-            </th>
+            <th scope="col">Table Tags</th>
+            <th scope="col">Function of Tags</th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>
-             <h5>< table ></h5>
-            </td>
+            <th scope="row">< table ></th>
+            <td scope="row">Write here what does it do</td>
           </tr>
           <tr>
-            <td>
-              <h5>< thead></h5>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <h5>< tbody></h5>
-            </td>
+            <th scope="row">< thead ></th>
+            <td scope="row">Write here what does it do</td>
           </tr>
         </tbody>
       </table>
