--- a/index.html
+++ b/index.html
@@ -15,23 +15,27 @@
   </header>
 
 <body>
+  <h2 class="header">HTML</h2>
   <section id="html">
-      <h2 class="header">HTML</h2>
+    <article>
       <table class="tableone">
         <thead class="table head">
           <tr>
-            <th scope="col">Table Tags</th>
-            <th scope="col">Function of Tags</th>
+            <th scope="col">Table Elements</th>
+            <th scope="col">Function of Elements</th>
+            <th scope="col">Example</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <th scope="row">< table ></th>
-            <td scope="row">Write here what does it do</td>
+            <td scope="row">Creates a table</td>
+            <td scope="row"></td>
           </tr>
           <tr>
             <th scope="row">< thead ></th>
-            <td scope="row">Write here what does it do</td>
+            <td scope="row">Used to input data into the table head</td>
+            <td scope="row">Under < thead > use < tr > followed by < th scope="col" >< /th >. This will create a colomn heading.</td>
           </tr>
         </tbody>
       </table>
