--- a/index.html
+++ b/index.html
@@ -30,12 +30,36 @@
           <tr>
             <th scope="row">< table ></th>
             <td scope="row">Creates a table</td>
-            <td scope="row"></td>
+            <td scope="row">N/A</td>
           </tr>
           <tr>
             <th scope="row">< thead ></th>
             <td scope="row">Used to input data into the table head</td>
             <td scope="row">Under < thead > use < tr > followed by < th scope="col" >< /th >. This will create a colomn heading.</td>
+          </tr>
+          <tr>
+            <th scope="row">< tbody ></th>
+            <td scope="row">The main part of a table, all data goes in here.</td>
+            <td scope="row">Where all the data of the table under headings lives</td>
+          </tr>
+          <tr>
+            <th scope="row">< tr ></th>
+            <td scope="row">tr stands for Table Row</td>
+            <td scope="row">Adds a row to a table and needs (td) to be added to enter data into the row</td>
+          </tr>
+          <tr>
+            <th scope="row">< td ></th>
+            <td scope="row">tr stands for Table Data</td>
+            <td scpoe="row">Adds data to a (tr) and is used with < td scope"row" ></td>
+          </tr>
+          <tr>
+            <th scope="row">colspan/<br>rowspan</th>
+            <td scope="row">Table data can span columns and rows using these attributes</td>
+          </tr>
+          <tr>
+            <th scope="row">< tfooter ></th>
+            <td scope="row">The foot of the table</td>
+            <td scope="row">Add any information to be presented at the bottom of the table such as a total</td>
           </tr>
         </tbody>
       </table>
