--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <h2 class="header">HTML</h2>
   <section id="html">
     <article>
-      <table class="tableone">
-        <thead class="table head">
+      <table>
+        <thead>
           <tr>
             <th scope="col">Table Elements</th>
             <th scope="col">Function of Elements</th>
